Changed font-size, stylized ranks, fixed proble with not showing overload on 429

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5956,6 +5956,7 @@ select.selectpicker {
   text-align: center;
   font-size: 100px;
   font-weight: bold;
+  text-shadow: 5px 5px #11536e;
   z-index: 5; }
 
 .pts-stable {
@@ -6010,6 +6011,7 @@ select.selectpicker {
   text-align: center;
   font-size: 75px;
   font-weight: bold;
+  text-shadow: 3.75px 3.75px #11536e;
   z-index: 5; }
 
 .input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group {
@@ -6071,6 +6073,7 @@ h1 {
   text-align: center;
   font-size: 100px;
   font-weight: bold;
+  text-shadow: 5px 5px #11536e;
   z-index: 5; }
 
 .pts {
@@ -6143,6 +6146,7 @@ h1 {
   text-align: center;
   font-size: 75px;
   font-weight: bold;
+  text-shadow: 3.75px 3.75px #11536e;
   z-index: 5; }
 
 .team-100 {
@@ -6246,7 +6250,8 @@ h1 {
 .main-text {
   font-weight: 300;
   font-family: ftw;
-  font-size: 17px; }
+  font-size: 24px;
+  vertical-align: middle; }
 
 .info-message {
   padding: 20px;
@@ -6301,6 +6306,7 @@ h1 {
     text-align: center;
     font-size: 99px;
     font-weight: bold;
+    text-shadow: 4.95px 4.95px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -6364,6 +6370,7 @@ h1 {
     text-align: center;
     font-size: 60px;
     font-weight: bold;
+    text-shadow: 3px 3px #11536e;
     z-index: 5; } }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -6394,6 +6401,7 @@ h1 {
     text-align: center;
     font-size: 79px;
     font-weight: bold;
+    text-shadow: 3.95px 3.95px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -6457,6 +6465,7 @@ h1 {
     text-align: center;
     font-size: 60px;
     font-weight: bold;
+    text-shadow: 3px 3px #11536e;
     z-index: 5; } }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -6485,6 +6494,7 @@ h1 {
     text-align: center;
     font-size: 62px;
     font-weight: bold;
+    text-shadow: 3.1px 3.1px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -6558,6 +6568,7 @@ h1 {
     text-align: center;
     font-size: 65px;
     font-weight: bold;
+    text-shadow: 3.25px 3.25px #11536e;
     z-index: 5; }
   h1 {
     font-size: 20px; } }
@@ -6602,6 +6613,7 @@ h1 {
     text-align: center;
     font-size: 56px;
     font-weight: bold;
+    text-shadow: 2.8px 2.8px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -6675,6 +6687,7 @@ h1 {
     text-align: center;
     font-size: 61px;
     font-weight: bold;
+    text-shadow: 3.05px 3.05px #11536e;
     z-index: 5; }
   h1 {
     font-size: 20px; }
@@ -6707,6 +6720,7 @@ h1 {
     text-align: center;
     font-size: 50px;
     font-weight: bold;
+    text-shadow: 2.5px 2.5px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -6780,6 +6794,7 @@ h1 {
     text-align: center;
     font-size: 54px;
     font-weight: bold;
+    text-shadow: 2.7px 2.7px #11536e;
     z-index: 5; }
   h1 {
     font-size: 20px; }
@@ -6812,6 +6827,7 @@ h1 {
     text-align: center;
     font-size: 40.5px;
     font-weight: bold;
+    text-shadow: 2.025px 2.025px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -6885,6 +6901,7 @@ h1 {
     text-align: center;
     font-size: 45px;
     font-weight: bold;
+    text-shadow: 2.25px 2.25px #11536e;
     z-index: 5; }
   h1 {
     font-size: 20px; }
@@ -6917,6 +6934,7 @@ h1 {
     text-align: center;
     font-size: 34px;
     font-weight: bold;
+    text-shadow: 1.7px 1.7px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -6990,6 +7008,7 @@ h1 {
     text-align: center;
     font-size: 36.5px;
     font-weight: bold;
+    text-shadow: 1.825px 1.825px #11536e;
     z-index: 5; }
   h1 {
     font-size: 20px; }
@@ -7022,6 +7041,7 @@ h1 {
     text-align: center;
     font-size: 25px;
     font-weight: bold;
+    text-shadow: 1.25px 1.25px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -7095,6 +7115,7 @@ h1 {
     text-align: center;
     font-size: 27.5px;
     font-weight: bold;
+    text-shadow: 1.375px 1.375px #11536e;
     z-index: 5; }
   h1 {
     font-size: 20px; }
@@ -7127,6 +7148,7 @@ h1 {
     text-align: center;
     font-size: 18.5px;
     font-weight: bold;
+    text-shadow: 0.925px 0.925px #11536e;
     z-index: 5; }
   .pts {
     text-align: center;
@@ -7200,6 +7222,7 @@ h1 {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+    text-shadow: 1px 1px #11536e;
     z-index: 5; }
   h1 {
     font-size: 20px; }
@@ -7215,6 +7238,8 @@ h1 {
     border-radius: 3px; } }
 
 @media (min-width: 361px) and (max-width: 479px) {
+  .main-text {
+    font-size: 17px; }
   h1 {
     font-size: 20px; }
   .img-summoner {
@@ -7223,6 +7248,8 @@ h1 {
     border-radius: 2px; } }
 
 @media (max-width: 361px) {
+  .main-text {
+    font-size: 14px; }
   h1 {
     font-size: 20px; }
   .img-summoner {
