--- a/resources/assets/sass/_main.scss
+++ b/resources/assets/sass/_main.scss
@@ -168,7 +168,8 @@ h1 {
 .main-text{
   font-weight: 300;
   font-family: $main-font;
-  font-size: 17px;
+  font-size: 24px;
+  vertical-align: middle;
 }
 
 
